--- a/view/index.pug
+++ b/view/index.pug
@@ -1,8 +1,7 @@
 doctype html
 head 
     title Операции с цветами
-    script(src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous")
-    script(defer, src="public/script.js") 
+    script(defer, src="public/main.js") 
 body 
     div
         input(type="button", onclick="Add()", value="Добавить информацию о растении")
